--- a/index.html
+++ b/index.html
@@ -86,34 +86,34 @@
             <div class="row">
                 <div class="col-lg-4 col-sm-6 mb-4">
                     <div class="portfolio-item">
-                        <a class="portfolio-link text-decoration-none" data-toggle="modal" href="#">
-                            <img class="center-cropped" src="images/img5.jpg" alt="">
-                        </a>
-                        <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Ezay Myanmar</div>
-                            <div class="portfolio-caption-subheading text-muted">e-commerce</div>
+                        <div class="portfolio-link text-decoration-none" data-toggle="modal" >
+                           <a href="https://github.com/eisaungsabelphyu/frontend_ui_test" target="_blank"> <img class="img-thumbnail center-cropped" src="images/front-end-pj.png" alt=""></a>
+                        </div>
+                        <div class="portfolio-caption ">
+                            <div class="portfolio-caption-heading">Chocolate Shop</div>
+                            <div class="portfolio-caption-subheading ">frontend design</div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-4">
                     <div class="portfolio-item">
-                        <a class="portfolio-link text-decoration-none" data-toggle="modal" href="#portfolioModal1">
-                            <img class="center-cropped" src="images/img5.jpg" alt="">
-                        </a>
+                        <div class="portfolio-link text-decoration-none" data-toggle="modal" >
+                            <a href="https://github.com/eisaungsabelphyu/movie_channel" target="_blank"><img class="img-thumbnail center-cropped" src="images/front-end2.png" alt=""></a>
+                        </div>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">U Bo Aye Cosmetics</div>
-                            <div class="portfolio-caption-subheading text-muted">e-commerce</div>
+                            <div class="portfolio-caption-heading">Funny movie channel</div>
+                            <div class="portfolio-caption-subheading ">frontend design</div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-4">
                     <div class="portfolio-item">
-                        <a class="portfolio-link text-decoration-none" data-toggle="modal" href="#portfolioModal2">
-                            <img class="center-cropped" src="images/img5.jpg" alt="">
-                        </a>
+                        <div class="portfolio-link text-decoration-none" data-toggle="modal" >
+                            <a href="https://github.com/eisaungsabelphyu/pos_system_sample" target="_blank"><img class="img-thumbnail center-cropped" src="images/pos-pj.png" alt=""></a>
+                        </div>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Star Zone Travels</div>
-                            <div class="portfolio-caption-subheading text-muted">&amp; Tours</div>
+                            <div class="portfolio-caption-heading">Food order</div>
+                            <div class="portfolio-caption-subheading ">pos system sample</div>
                         </div>
                     </div>
                 </div>
